# fctpls

./: .gitignore  README.md  pyproject.toml
logs/: final.txt
notebooks/former/: FEPLS_SPXUSD_JPXJPY_reduced_v1.ipynb  FEPLS_SPXUSD_JPXJPY_reduced_v1.py  FEPLS_Simulations.ipynb  FEPLS_Simulations.py  edge_simulations_tau_kappa.ipynb  edge_simulations_tau_kappa.py  edgeofinequality.ipynb  edgeofinequality.py  plot_edge_simulations_tau_kappa.py  sim (1).ipynb  sim (1).py  sim.html  sim.ipynb  sim.py  torun.py
notebooks/new/: EXPLICATION_QUANTILE_CONDITIONNEL.md  adapted.ipynb  adapted.py  adapted_viz_k.py  adaptedk5.ipynb  adaptedk5.py  debug_beta_same_y.py  fepls_2d_3d_example.py  hypothesis_verif.ipynb  hypothesis_verif.py  investigate_beta_duplication.py  large_scale_hypothesisverif.py  large_scale_tau_comparison_plotting copy.py  large_scale_tau_comparison_plotting.py  large_scale_tau_traintest.py  sim.ipynb  stats_analysis.ipynb  stats_analysis.py  subsampling_apple.py  subsampling_tau_comparison.py  tau-1.py
notebooks/stooq_examples/: viz.ipynb
refs/report/: README.md  beamer.aux  beamer.nav  beamer.out  beamer.tex  beamer.toc  idea.md  report.aux  report.out  report.tex  speech.md
results/: fepls_stats.csv
results/hypothesis_verification/: hypothesis_verification_summary.csv
results/large_scale_logs/: 4ig_akko.txt  4ig_alteo.txt  4ig_any.txt  4ig_appeninn.txt  4ig_autowallis.txt  4ig_bif.txt  4ig_dunahouse.txt  4ig_esense.txt  4ig_granit.txt  4ig_gspark.txt  4ig_masterplast.txt  (+109 more)
tests/: test_env.py
utils/: README_FEPLS_ND.md  __init__.py  fepls_nd.py
(+6 files in other folders)
