[project]
name = "fctpls"
version = "0.1.0"
description = "functional extreme pls in evt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fbm>=0.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.9.3",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tach>=0.16.3",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {fctpls = "."} # you can write inside the brackets something like "Model1" = "models/model1/", "Model2" = "models/model2/"
packages = ["fctpls"] # same, smth like ["Model1", "Model2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
